[package]
name = "nebula"
version = "0.1.0"
edition = "2024"
description = "A peer-to-peer distributed file system with content-addressable storage and DHT"
authors = ["Tiago Silva"]
license = "MIT"
repository = "https://github.com/T-silva15/Nebula"
readme = "README.md"
keywords = ["distributed", "p2p", "file-system", "content-addressable", "dht"]
categories = ["filesystem", "network-programming"]

[dependencies]
# Phase 1: Basic node setup and networking
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.55.0", features = ["tcp", "noise", "yamux", "identify", "ping"] }
clap = { version = "4.5.40", features = ["derive"] }